--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <script>
 
-        document.body.style.backgroundImage = "url('assets/anims/bg.jpg')";
+        document.body.style.backgroundImage = "url('assets/anims/gr.jpg')";
 
     </script>
 
