--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <div class="buttons">
 
-            <a href="javascript://" class="link" onclick="location.href='tg://resolve?domain=afc_admin'">Telegram</a>
+            <a href="javascript://" class="link" onclick="location.href='tg://resolve?domain=Edward_Kallin'">Telegram</a>
 
             <a href="javascript://" class="link" onclick="location.href='https://yoomoney.ru/to/4100112152102943'">ЮMoney</a>
 
