--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
             <a href="javascript://" class="link" onclick="location.href='tg://resolve?domain=Edward_Kallin'">Telegram</a>
 
-            <a href="javascript://" class="link" onclick="location.href='https://donate.qiwi.com/payin/Edward_Kallin'">Донат</a>
+            <a href="javascript://" class="link" onclick="location.href='https://yoomoney.ru/to/4100112152102943'">Донат</a>
 
         </div>
 
